styles/blocks/_news.scss
@use '../helpers' as *;

.news {
  display: grid;
  padding-block: fluid(80, 40);
  row-gap: rem(60);

  @include laptop {
    row-gap: rem(40);
  }

  &__header {
    display: flex;
    column-gap: 1rem;
    align-items: center;
    justify-content: space-between;
  }

  &__title {
    @include fluid-text(28, 20);

    color: #CCC;
  }

  &__list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(rem(358), 1fr));
    gap: rem(30);
  }
}

